--- a/_sass/jekyll-theme-merlot.scss
+++ b/_sass/jekyll-theme-merlot.scss
@@ -1,4 +1,4 @@
 @import "screen";
 @import "rouge-base16-solarized";
-@import url("non-screen.css") handheld;
-@import url("non-screen.css") only screen and (max-device-width:640px);
+//@import url("non-screen.css") handheld;
+@import url("non-screen.css") only screen;
