--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,15 +29,16 @@
 
       <header>
         <h1>
+          <h2>
             <span class="ribbon-outer">
             <span class="ribbon-inner">
             {{ site.title | default: site.github.repository_name }}
-            {{ site.description | default: site.github.project_tagline }}
+            {{ site.description | default: site.github.project_tagline }}</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        </h1>
+          </h1>
       </header>
 
       {% if site.show_downloads %}
